# x/bonds/spec/client/lcd/swagger-ui/swagger.yaml
@@ -266,7 +266,7 @@ paths:
       parameters:
         - in: body
           name: edit_bond_body
-          description: The fields to be edited and the list of the bond's signers
+          description: The fields to be edited
           schema:
             $ref: "#/definitions/BondEdit"
   /bonds/buy:
@@ -530,10 +530,6 @@ definitions:
           allow_sells:
             type: string
             example: "true"
-          signers:
-            type: array
-            items:
-              $ref: "#/definitions/Address"
           batch_blocks:
             type: number
             example: 5
@@ -630,9 +626,6 @@ definitions:
       allow_sells:
         type: string
         example: "true"
-      signers:
-        type: string
-        example: "cosmos1qns07zjjsllfc6w7486f7v2nvyfsq30myn3nje,cosmos1qns07zjjsllfc6w7486f7v2nvyfsq30myn3nje"
       batch_blocks:
         type: string
         example: "5"
@@ -660,9 +653,6 @@ definitions:
       sanity_margin_percentage:
         type: string
         example: "56.78"
-      signers:
-        type: string
-        example: "cosmos1qns07zjjsllfc6w7486f7v2nvyfsq30myn3nje,cosmos1qns07zjjsllfc6w7486f7v2nvyfsq30myn3nje"
       bond_did:
         type: string
         example: "{\"did\":\"U7GK8p8rVhJMKhBVRCJJ8c\",\"verifyKey\":\"FmwNAfvV2xEqHwszrVJVBR3JgQ8AFCQEVzo1p6x4L8VW\",\"encryptionPublicKey\":\"domKpTpjrHQtKUnaFLjCuDLe2oHeS4b1sKt7yU9cq7m\",\"secret\":{\"seed\":\"933e454dbcfc1437f3afc10a0cd512cf0339787b6595819849f53707c268b053\",\"signKey\":\"Aun1EpjR1HQu1idBsPQ4u4C4dMwtbYPe1SdSC5bUerFC\",\"encryptionPrivateKey\":\"Aun1EpjR1HQu1idBsPQ4u4C4dMwtbYPe1SdSC5bUerFC\"}}"
